#4 added wrapper div to right panel trees for correct scrollbar rendering

--- a/nextgisweb_compulink/compulink_site/static/css/tree.css
+++ b/nextgisweb_compulink/compulink_site/static/css/tree.css
@@ -24,3 +24,16 @@
     width: 16px;
     height: 21px; /* todo: for centering icon by text, need implement this by background-position */
 }
+
+#rightPanel div.dijitContentPane {
+    overflow: hidden;
+}
+
+#rightPanel div.tree-wrapper {
+    overflow: auto;
+    position: absolute;
+    top: 23px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
